set up security for edit and add book

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,10 @@
-<p style="color: green"><%= notice %></p>
 
 <%= render @book %>
 
-<div>
-  <%= link_to "Edit this book", edit_book_path(@book) %> |
-  <%= link_to "Back to books", books_path %>
+<% if current_user == @book.author %>
+  <%= link_to "Edit", edit_book_path(@book) %>
+  <%= button_to "Destroy", @book, method: :delete %>
+<% end %>
 
-  <%= button_to "Destroy this book", @book, method: :delete %>
-</div>
+
+
