set up security for edit and add book

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -9,8 +9,8 @@
     <%= f.input :author %>
     <%= f.input :publication_year %>
     <div class="field">
-    <%= f.label :category, class:"title" %>
-    <%= f.select :category, Book::CATEGORY, prompt: "Select category" %>
+    <%= f.label :category_id, class:"title" %>
+    <%= f.select :category_id, Book::CATEGORY, prompt: "Select category" %>
   </div>
   </div>
 
