--- a/app/views/layouts/_category_navbar.html.erb
+++ b/app/views/layouts/_category_navbar.html.erb
@@ -9,7 +9,7 @@
     <li><%= link_to "Thriller", books_path(category: " Thriller") %></li>
     <li><%= link_to " Horror", books_path(category: " Horror") %></li>
     <li><%= link_to "Biography", books_path(category: "Biography") %></li>
-    <li><%= link_to "Self-help", books_path(category: "Mystery") %></li>
+    <li><%= link_to "Self-help", books_path(category: "Self-help") %></li>
   
   </ul>
 </nav>
