--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -10,7 +10,8 @@
     <%= f.input :publication_year %>
     <div class="field">
     <%= f.label :category_id, class:"title" %>
-    <%= f.select :category_id, Book::CATEGORY, prompt: "Select category" %>
+    <%= f.select :category_id, Category.all.map { |c| [c.name, c.id] }, prompt: "Select category" %>
+  
   </div>
   </div>
 
