Add functionality to filter books by Category

--- a/app/assets/stylesheets/genre_nav.css
+++ b/app/assets/stylesheets/genre_nav.css
@@ -31,7 +31,6 @@ li{
  background: #ffb703;
  transition: 0.5s;
 }
-
-a:active{
-    background: #ffb703;
+.category_nav a:active {
+background: #ffb703;
 }
