--- a/app/views/layouts/_category_navbar.html.erb
+++ b/app/views/layouts/_category_navbar.html.erb
@@ -3,7 +3,7 @@
     <li><%= link_to "Fiction", books_path(category: "Fiction") %></li>
     <li><%= link_to "Non-Fiction", books_path(category: "Non-Fiction") %></li>
     <li><%= link_to "Mystery", books_path(category: "Mystery") %></li>
-    <li><%= link_to "Science Fiction", books_path(category: "Science-Fiction") %></li>
+    <li><%= link_to "Science", books_path(category: "Science-Fiction") %></li>
     <li><%= link_to "Classic", books_path(category: "Classic") %></li>
     <li><%= link_to "Fantasy", books_path(category: "Fantasy") %></li>
     <li><%= link_to "Thriller", books_path(category: "Thriller") %></li>
