styling on index page and image

--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,10 +1,10 @@
 <% if notice %>
-<div class="notification is-success">
+<div>
 <p class = "notice"><%= notice %></p>
 </div>
 <% end %>
 <% if alert %>
-<div class="notification is-danger">
+<div>
 <p class = "alert"><%= alert %></p>
 </div>
 <% end %>
