--- a/app/assets/stylesheets/genre_nav.css
+++ b/app/assets/stylesheets/genre_nav.css
@@ -86,3 +86,21 @@ background: #ffb703;
     font-size: 30px;
     font-family: cursive;
   }
+
+  .notice{
+    font-size: 30px;
+    text-align: center;
+    background: #70e000;
+    color: white;
+    /* border: 2px solid #006400; */
+  }
+
+  
+  .alert{
+    font-size: 30px;
+    padding-bottom: 10px;
+    text-align: center;
+    background: red;
+    color: white;
+    /* border: 2px solid #006400; */
+  }
