--- a/app/assets/stylesheets/genre_nav.css
+++ b/app/assets/stylesheets/genre_nav.css
@@ -103,3 +103,9 @@ background: #ffb703;
     background: red;
     color: white;
   }
+
+  .book-image {
+    height: 475px;
+    width: 325px;
+  }
+
