--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,7 @@
 
 <div class="row">
 <div class= "col-md-4">
-
+<%= render @book.reviews %>
 <div>
 <%= link_to "Add Review", new_book_review_path(@book) %>
 </div>
