--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,9 @@
-<p> <%= review.rating %></p>
+<div class="rating">
+  <% review.rating.times do %>
+    <%= fa_icon "star" %>
+  <% end %>
+</div>
+
 <p><%= review.comment %></p>
 
 <%
