Add average rating and styling for show page

--- a/app/assets/stylesheets/genre_nav.css
+++ b/app/assets/stylesheets/genre_nav.css
@@ -148,6 +148,13 @@ background: #ffb703;
   }
 
 
+  @media (max-width: 1400px) {
+    .navbar-2 {
+      display: none;
+    }
+  }
+  
+
   /* .book-image-container {
     position: relative;
     padding-bottom: 100%; 
