--- a/app/views/layouts/_category_navbar.html.erb
+++ b/app/views/layouts/_category_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class ="category_nav">
+<nav class ="category_nav navbar-2">
   <ul>
     <li><%= link_to "Fiction", books_path(category: "Fiction") %></li>
     <li><%= link_to "Non-Fiction", books_path(category: "Non-Fiction") %></li>
