--- a/app/views/users/_session_manager.html.erb
+++ b/app/views/users/_session_manager.html.erb
@@ -1,5 +1,5 @@
  <% if user_signed_in? %>
- <%= button_to "Edit Profile  ", edit_user_registration_path,method: :get, class: "btn btn-dark mx-1  me-2" %> 
+ <%= button_to "Account ", edit_user_registration_path,method: :get, class: "btn btn-dark mx-1  me-2" %> 
 
 
 <%= button_to "log out  ", destroy_user_session_path, method: :delete, class: "btn btn-warning mx-1  me-2" %>
