--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+
+<div class="container pt-5">
+  <h1>User Profile: <%= @user.email %></h1>
+
+  <h2>Books Added by <%= @user.email %>:</h2>
+  <% @books.each do |book| %>
+    <%= link_to book.title, book_path(book) %><br>
+  <% end %>
+
+  <h2>Reviews Written by <%= @user.email %>:</h2>
+  <% @reviews.each do |review| %>
+    <%= render partial: 'reviews/review', locals: { review: review } %>
+  <% end %>
+</div>
