--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -14,15 +14,12 @@
 <%
 =end%>
 <% if user_signed_in? %>
-
-<% if review.user_id == current_user.id %>
-
-<%= link_to 'Edit', edit_book_review_path(review.book, review), class: 'button' %>
-
-<%= link_to 'Delete', book_review_path(@book, review), method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
-
+  <% if review.user_id == current_user.id %>
+    <%= link_to 'Edit', edit_book_review_path(review.book_id, review), class: 'button' %>
+    <%= link_to 'Delete', book_review_path(review.book_id, review), method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
+  <% end %>
 <% end %>
-<% end %>
+
 
 
 
