--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <%= link_to "Book Review App", root_path, class: 'nav-link' %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" onclick="openSidebar()">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -25,5 +25,28 @@
         <button class="btn btn-outline-warning" type="submit">Search</button>
       <% end %>
     </div>
+  </div>
+
+  
+  <div class="sidebar" id="sidebar">
+    <a href="javascript:void(0)" class="close-btn" onclick="closeSidebar()">&times;</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <%= link_to "Home", root_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "User Profile", user_path(current_user), class: "nav-link" if current_user %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Add Book", new_book_path, class: "nav-link" %>
+      </li>
+       <% if user_signed_in? %>
+            <%= button_to "Account ", edit_user_registration_path,method: :get, class: "btn btn-dark mx-1  me-2" %> 
+            <%= button_to "log out  ", destroy_user_session_path, method: :delete, class: "btn btn-warning mx-1  me-2" %>
+      <%else%>
+             <%= link_to "sign up  ", new_user_registration_path, class: "btn btn-warning mx-1 me-2" %>
+             <%= link_to "login", new_user_session_path,class: "btn btn-dark mx-1  me-2" %>
+      <% end %> 
+    </ul>
   </div>
 </nav>
