--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit %>
+        <%= f.button :submit, class:"black-button-2" %>
       </div>
     <% end %>
   </div>
