--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,7 +22,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h1> Reviews </h1>
+      <h1>Reviews</h1>
       <% @book.reviews.each do |review| %>
         <div class="review-container">
           <% if review.user.present? %>
@@ -35,16 +35,16 @@
         </div>
       <% end %>
 
-      <div>
-        <%= link_to "Add Review", new_book_review_path(@book) %>
+      <div class="add-review">
+        <%= link_to "Add Review", new_book_review_path(@book), class: 'button black-button' %>
       </div>
     </div>
   </div>
 
-  <%= link_to "Back", root_path %>
-
-  <% if book_author(@book) %>
-    <%= link_to 'Edit', edit_book_path(@book), class: 'button' %>
-    <%= button_to "Destroy this book", @book, method: :delete, class: 'button' %>
-  <% end %>
+  <div class="button-group">
+    <% if book_author(@book) %>
+      <%= link_to 'Edit', edit_book_path(@book), class: 'button orange-button' %>
+      <%= button_to "Destroy this book", @book, method: :delete, class: 'button orange-button' %>
+    <% end %>
+  </div>
 </div>
