--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,7 +1,18 @@
-<h1> Edit Review </h1>
+<div class="container pt-5">
+  <h1>Edit Review</h1>
 
-<%= simple_form_for([@book, @review]) do |f| %>
-<%= f.input :rating %>
-<%= f.input :comment %>
-<%= f.button :submit %>
-<% end %>
+  <%= simple_form_for([@book, @review]) do |f| %>
+    <div class="form-group">
+      <%= f.select :rating, options_for_select([1, 2, 3, 4, 5]), { include_blank: "Select rating" }, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+    
+      <%= f.input :comment, class: "form-control", as: :text, input_html: { rows: 5 } %>
+    </div>
+
+    <%= f.button :submit, class: "black-button-2" %>
+  <% end %>
+</div>
+
+
