--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,9 +1,15 @@
-<%= form_with(model: @review, url: book_reviews_path(@book), local: true) do |form| %>
-  <%= form.label :rating %>
-  <%= form.select :rating, options_for_select([1, 2, 3, 4, 5]) %>
+<div class="container-3 pt-5">
+  <%= form_with(model: @review, url: book_reviews_path(@book), local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :rating, class: "form-label" %>
+      <%= form.select :rating, options_for_select([1, 2, 3, 4, 5]), { include_blank: "Select rating" }, class: "form-control" %>
+    </div>
 
-  <%= form.label :comment %>
-  <%= form.text_area :comment %>
+    <div class="form-group">
+      <%= form.label :comment, class: "form-label" %>
+      <%= form.text_area :comment, class: "form-control", rows: 5 %>
+    </div>
 
-  <%= form.submit %>
-<% end %>
+    <%= form.submit "Submit", class: "black-button-2" %>
+  <% end %>
+</div>
