--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container-3 pt-5">
+<div class="container pt-5">
   <%= form_with(model: @review, url: book_reviews_path(@book), local: true) do |form| %>
     <div class="form-group">
       <%= form.label :rating, class: "form-label" %>
