--- a/app/assets/stylesheets/genre_nav.css
+++ b/app/assets/stylesheets/genre_nav.css
@@ -213,7 +213,7 @@ background: #ffb703;
   }
 
   .container-2 {
-    padding-top: 250px;
+    padding-top: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -258,6 +258,7 @@ background: #ffb703;
   }
 
   .black-button-2{
+    margin-top: 10px;
     background-color: #000;
     color: #ccc;
   }
@@ -298,44 +299,5 @@ display: flex;
     margin-right: 0;
   }
 
-  .container-3 {
-    max-width: 600px;
-    margin: 0 auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .form-label {
-    font-weight: bold;
-  }
-  
-  .form-control {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  textarea.form-control {
-    height: 150px;
-  }
-  
-  .btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .btn-primary {
-    background-color: #007bff;
-    color: #fff;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0056b3;
-  }
   
   
